--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <title>Creative Digital Agencies Website Templates</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="./styles/reset.css">
-        <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./styles/animations.css">
-        <link rel="stylesheet" href="./styles/animate.min.css">
+        <link rel="stylesheet" href="styles/reset.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/animations.css">
+        <link rel="stylesheet" href="styles/animate.min.css">
     </head>
     <body>
         <div class="wrapper">
@@ -15,7 +15,7 @@
                 <div class="container">
                     <nav>
                         <div class="logo">
-                            <img src="./media/logo/logo.png" alt="logo">
+                            <img src="media/logo/logo.png" alt="logo">
                         </div>
                         <div class="header-menu">
                             <ul>
@@ -51,28 +51,28 @@
                 <div class='features-list'>
                     <div class="features-box animate__fadeInDown wow">
                         <div class="features-box-img">
-                            <img src="/media/features/write.png" alt="write">
+                            <img src="media/features/write.png" alt="write">
                         </div>
                         <h3>Feature one</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     <div class="features-box animate__fadeInUp wow">
                         <div class="features-box-img">
-                            <img src="/media/features/write.png" alt="write2">
+                            <img src="media/features/write.png" alt="write2">
                         </div>
                         <h3>Feature two</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     <div class="features-box animate__fadeInDown wow">
                         <div class="features-box-img">
-                            <img src="/media/features/search.png" alt="search">
+                            <img src="media/features/search.png" alt="search">
                         </div>
                         <h3>Feature three</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     <div class="features-box animate__fadeInUp wow">
                         <div class="features-box-img">
-                            <img src="/media/features/says.png" alt="says">
+                            <img src="media/features/says.png" alt="says">
                         </div>
                         <h3>Feature four</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -161,13 +161,13 @@
                 <div class="copy-container">
                     <div class="copy-box wow animate__lightSpeedInLeft">
                         <div class="copy-img">
-                            <img src="/media/quick-area/write-copy.png" alt="copy">
+                            <img src="media/quick-area/write-copy.png" alt="copy">
                         </div>
                         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                     </div>
                     <div class="copy-box wow animate__lightSpeedInRight">
                         <div class="copy-img">
-                            <img src="/media/quick-area/write-copy.png" alt="copy">
+                            <img src="media/quick-area/write-copy.png" alt="copy">
                         </div>
                         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                     </div>
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <div class="key-features-img wow animate__fadeInRightBig">
-                        <img src='/media/key-feature/phone.png' alt="phone">
+                        <img src='media/key-feature/phone.png' alt="phone">
                     </div>
                 </div>
             </div>
@@ -204,28 +204,28 @@
                 </div>
                 <div class="team-container">
                     <div class="team-box wow animate__fadeInDown">
-                        <div class="worker-img"><img src="/media/workers/worker1.png" alt="CEO"></div>
+                        <div class="worker-img"><img src="media/workers/worker1.png" alt="CEO"></div>
                         <div class="worker-info wow animate__fadeIn delay2">
                             <h3>john snow</h3>
                             <h4>CEO</h4>
                         </div>
                     </div>
                     <div class="team-box wow animate__fadeInUp">
-                        <div class="worker-img"><img src="/media/workers/worker2.png" alt="WebDesigner"></div>
+                        <div class="worker-img"><img src="media/workers/worker2.png" alt="WebDesigner"></div>
                         <div class="worker-info wow animate__fadeIn delay2">
                             <h3>lady sansa</h3>
                             <h4>WebDesigner</h4>
                         </div>
                     </div>
                     <div class="team-box wow animate__fadeInDown">
-                        <div class="worker-img"><img src="/media/workers/worker3.png" alt="Photographer"></div>
+                        <div class="worker-img"><img src="media/workers/worker3.png" alt="Photographer"></div>
                         <div class="worker-info wow animate__fadeIn delay2">
                             <h3>david smith</h3>
                             <h4>Photographer</h4>
                         </div>
                     </div>
                     <div class="team-box wow animate__fadeInUp">
-                        <div class="worker-img"><img src="/media/workers/worker4.png" alt="Photographer-2"></div>
+                        <div class="worker-img"><img src="media/workers/worker4.png" alt="Photographer-2"></div>
                         <div class="worker-info wow animate__fadeIn delay2">
                             <h3>lady sansa</h3>
                             <h4>Photographer</h4>
@@ -260,7 +260,7 @@
                 <div class="creator">Layout made by: Ilya V.</div>
             </div>
         </footer>
-        <script src="/scripts/wow.min.js"></script>
-        <script src="/scripts/main.js"></script>
+        <script src="scripts/wow.min.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
